testsuite/tests/overloadedrecflds/should_compile/T22160_A.hs
module T22160_A where

data A = MkA { x :: Int }
