testsuite/tests/overloadedrecflds/should_fail/T26480_aux2.hs
module T26480_aux2 where

data R2 = MkR2 { f2 :: Int }
